--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Mine Sweeper</title>
 </head>
 <body>
 
     <div class="board">
-        <div></div>
-
     </div>
     
 
